--- a/app/download_tasks.gradle
+++ b/app/download_tasks.gradle
@@ -13,7 +13,7 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-task downloadTaskFile(type: Download) {
+tasks.register('downloadTaskFile', Download) {
     src 'https://storage.googleapis.com/mediapipe-models/face_landmarker/face_landmarker/float16/1/face_landmarker.task'
     dest project.ext.ASSET_DIR + '/face_landmarker.task'
     overwrite false
