--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-feature android:name="android.hardware.camera" android:required="false" />
     <application>
         <activity android:name="com.test.mlfacelandmarkplugin.PermissionHelper"
             android:exported="true">
-            <meta-data android:name="mlfacelandmarkplugin.PermissionHelper" android:value="true" android:theme="@style/Theme.AppCompat"/>
+            <meta-data android:name="mlfacelandmarkplugin.PermissionHelper" android:value="true" android:theme="@style/Theme.AppCompat.Light.DarkActionBar"/>
         </activity>
     </application>
 </manifest>
